syntax = "proto3";

package api;
import "google/api/annotations.proto";
import "include/graphql.proto";
option go_package = "./api";

message IotexBalanceByHeightRequest {
  repeated string address = 1;
  uint64 height = 2;
}

message IotexBalanceByHeightResponse {
  uint64 height = 1;
  repeated string balance  = 2;
}

message Erc20TokenBalanceByHeightResponse {
  uint64 height = 1;
  string contract_address = 2;
  repeated string balance  = 3;
}

message Erc20TokenBalanceByHeightRequest {
  repeated string address = 1;
  uint64 height = 2;
  string contract_address = 3;
}

message HermesRequest {
  uint64 startEpoch = 1; // Start epoch number
  uint64 epochCount = 2; // Number of epochs to query
  string rewardAddress = 3; //Name of reward address
}

message RewardDistribution {
  string voterEthAddress = 1;
  string voterIotexAddress = 2;
  string amount = 3;
}

message HermesDistribution {
  string delegateName = 1;
  repeated RewardDistribution rewardDistribution = 2;
  string stakingIotexAddress = 3;
  uint64 voterCount = 4;
  bool waiveServiceFee = 5;
  string refund = 6;
}

message HermesResponse {
  repeated HermesDistribution hermesDistribution = 1;
}

service AccountService {
  rpc IotexBalanceByHeight(IotexBalanceByHeightRequest) returns (IotexBalanceByHeightResponse) {
    option (graphql.schema) = {
      type: QUERY
      name: "IotexBalanceByHeight"
    };
    option (google.api.http) = {
      post: "/api.AccountService.IotexBalanceByHeight"
      body: "*"
    };
  };
  rpc Erc20TokenBalanceByHeight(Erc20TokenBalanceByHeightRequest) returns (Erc20TokenBalanceByHeightResponse) {
    option (graphql.schema) = {
      type: QUERY 
      name: "Erc20TokenBalanceByHeight"
    };
    option (google.api.http) = {
      post: "/api.AccountService.Erc20TokenBalanceByHeight"
      body: "*"
    };
  };
  rpc Hermes(HermesRequest) returns (HermesResponse) {
    option (graphql.schema) = {
      type: QUERY 
      name: "Hermes"
    };
    option (google.api.http) = {
      post: "/api.AccountService.Hermes"
      body: "*"
    };
  };
}