syntax = "proto3";

package api;
import "google/api/annotations.proto";
import "include/graphql.proto";
import "include/pagination.proto";
option go_package = "./api";

message ActionRequest {
  string address = 1;
  string actHash = 2;
  pagination.Pagination pagination = 3;
}

message ActionResponse {
  bool exist = 1;
  uint64 count = 2;
  repeated ActionInfo actionList = 3;
  repeated EvmTransferInfo evmTransferList = 4;
  repeated XrcInfo xrcList = 5;
}

message ActionInfo {
  string actHash = 1;
  string blkHash = 2;
  string actType = 3;
  string sender = 4;
  string recipient = 5;
  string amount = 6;
  uint64 timestamp = 7;
  string gasFee = 8;
  uint64 blkHeight = 9;
}

message EvmTransferInfo {
  string actHash = 1;
  string blkHash = 2;
  string from = 3;
  string to = 4;
  string quantity = 5;
  uint64 blkHeight = 6;
  uint64 timestamp = 7;
}

message XrcInfo {
  string actHash = 1;
  string from = 2;
  string to = 3;
  string quantity = 4;
  uint64 blkHeight = 5;
  uint64 timestamp = 6;
  string contract = 7;
}

service ActionService {
  rpc ActionByVoter(ActionRequest) returns (ActionResponse) {
    option (graphql.schema) = {
      type: QUERY 
      name: "ActionByVoter"
    };
    option (google.api.http) = {
      post: "/api.ActionService.ActionByVoter"
      body: "*"
    };
  };
  rpc ActionByAddress(ActionRequest) returns (ActionResponse) {
    option (graphql.schema) = {
      type: QUERY
      name: "ActionByAddress"
    };
    option (google.api.http) = {
      post: "/api.ActionsService.ActionByAddress"
      body: "*"
    };
  };
  rpc EvmTransfersByAddress(ActionRequest) returns (ActionResponse) {
    option (graphql.schema) = {
      type: QUERY
      name: "EvmTransfersByAddress" 
    };
    option (google.api.http) = {
      post: "/api.ActionService.EvmTransfersByAddress"
      body: "*"
    };
  };
  rpc GetXrc20ByAddress(ActionRequest) returns (ActionResponse) {
    option (graphql.schema) = {
      type: QUERY
      name: "GetXrc20ByAddress"
    };
    option (google.api.http) = {
      post: "/api.ActionService.GetXrc20ByAddress"
      body: "*"
    };
  };
}