syntax = "proto3";

package api;
import "google/api/annotations.proto";
import "include/graphql.proto";
// import "include/pagination.proto";
option go_package = "./api";

message ChainRequest {

}

message ChainResponse {
    uint64 mostRecentEpoch = 1; // most recent epoch
    uint64 mostRecentBlockHeight = 2; // most recent block height
}

service ChainService {
  rpc Chain(ChainRequest) returns (ChainResponse) {
    option (graphql.schema) = {
      type: QUERY   // declare as Query
      name: "Chain" // query name
    };
    option (google.api.http) = {
      post: "/api.ChainService.Chain"
      body: "*"
    };
  };
}