syntax = "proto3";

package api;
import "google/api/annotations.proto";
import "include/graphql.proto";
//import "include/pagination.proto";
option go_package = "./api";

message VoteByHeightRequest {
  repeated string address = 1;
  uint64 height = 2;
}

message VoteByHeightResponse {
  uint64 height = 1;
  repeated string stakeAmount  = 2;
  repeated string voteWeight  = 3;
}

message CandidateVoteByHeightRequest {
  repeated string address = 1;
  uint64 height = 2;
}

message CandidateVoteByHeightResponse {
  uint64 height = 1;
  repeated string stakeAmount  = 2;
  repeated string voteWeight  = 3;
  repeated string address = 4;
}

service StakingService {
  rpc VoteByHeight(VoteByHeightRequest) returns (VoteByHeightResponse) {
    option (graphql.schema) = {
      type: QUERY 
      name: "VoteByHeight"
    };
    option (google.api.http) = {
      post: "/api.StakingService.VoteByHeight"
      body: "*"
    };
  };
  rpc CandidateVoteByHeight(CandidateVoteByHeightRequest) returns (CandidateVoteByHeightResponse) {
    option (graphql.schema) = {
      type: QUERY 
      name: "CandidateVoteByHeight"
    };
    option (google.api.http) = {
      post: "/api.StakingService.CandidateVoteByHeight"
      body: "*"
    };
  };
}